@@ -1,2 +1,7 @@
 # LabTesting
 Research Lab Automation
+
+##Vm Options
+--module-path
+"Path to javafx lib"
+--add-modules=javafx.controls,javafx.fxml
